--- a/Flask_and_FastAPI_frameworks/requirements_FastAPI.txt
+++ b/Flask_and_FastAPI_frameworks/requirements_FastAPI.txt
@@ -2,10 +2,12 @@ annotated-types==0.6.0
 anyio==4.3.0
 certifi==2024.2.2
 click==8.1.7
+databases==0.9.0
 dnspython==2.6.1
 email_validator==2.1.1
 exceptiongroup==1.2.0
 fastapi==0.110.0
+greenlet==3.0.3
 h11==0.14.0
 httpcore==1.0.5
 httptools==0.6.1
@@ -23,6 +25,7 @@ python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
 sniffio==1.3.1
+SQLAlchemy==2.0.29
 starlette==0.36.3
 typing_extensions==4.10.0
 ujson==5.9.0
