--- a/Flask_and_FastAPI_frameworks/requirements_FastAPI.txt
+++ b/Flask_and_FastAPI_frameworks/requirements_FastAPI.txt
@@ -1,5 +1,6 @@
 annotated-types==0.6.0
 anyio==4.3.0
+bcrypt==4.1.2
 certifi==2024.2.2
 click==8.1.7
 databases==0.9.0
@@ -26,6 +27,7 @@ python-multipart==0.0.9
 PyYAML==6.0.1
 sniffio==1.3.1
 SQLAlchemy==2.0.29
+sqlmodel==0.0.16
 starlette==0.36.3
 typing_extensions==4.10.0
 ujson==5.9.0
